# task_app

./: Cargo.toml  helpful.md  todos.db  todos.db-shm  todos.db-wal
migrations/: 20250302183801_create_todos_table.sql
src/: db.rs  main.rs  models.rs  routes.rs  todo_controller.rs
