[package]
name = "task_app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
axum = "0.6" # For building HTTP APIs
dotenvy = "0.15.7"
tower-http = "0.6.2"
serde_json = "1.0.139"
uuid = { version = "1", features = ["v4", "serde"] }
